<resources>
    <string name="app_name">WisYuk</string>
    <string name="login_title_header">Login</string>
    <string name="enter_email">Email</string>
    <string name="email_format_is_not_correct">Email format is not correct</string>
    <string name="enter_password">Password</string>
    <string name="password_can_t_be_lower_than_8_characters">Password can\'t be lower than 8 characters</string>
    <string name="login">Login</string>
    <string name="sign_up_header_title">Sign Up</string>
    <string name="enter_name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="welcome">Welcome</string>
    <string name="search_tour">Search Tour</string>
    <string name="welcome_title">Where do you want to go, %1$s?</string>
    <string name="welcome_to_wisyuk">Welcome to WisYuk</string>
    <string name="recommendation_today">Look our Recommendations</string>
    <string name="tourism_preview_photo">Tourism Preview Photo</string>
    <string name="tourism_title">Tourism Title</string>
    <string name="description_item">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="date_item">Jan 00, 1971</string>
    <string name="title_tour">Title Tour</string>
    <string name="hotel">Hotel</string>
    <string name="note_hotel">*Hotel accommodation for three days since previous day until the next day of the date</string>
    <string name="price">Price</string>
    <string name="price_value">Rp100</string>
    <string name="add_to_plan">Add to Plan</string>
    <string name="ride">Ride</string>
    <string name="local_tour_guide">Local Tour Guide</string>
    <string name="continue_payment">Continue to Payment</string>
    <string name="dummy_selected_hotel">Hotel Hidayat</string>
    <string name="dummy_selected_ride">Suzuki Ertiga Jaya</string>
    <string name="dummy_selected_tour_guide">Alex</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_plan">Plans</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="back">Back</string>
    <string name="favorite">Favorite</string>

    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="payment_confirmation_photo">Payment Confirmation Photo</string>
    <string name="tv_plan_hotel_name">Dummy Hotel Name</string>
    <string name="tv_plan_hotel_date">Dummy Date</string>
    <string name="tv_plan_date">Dec 25, 2022</string>
    <string name="no_payment_method">Choose Payment Method</string>
    <string name="pay">Process Payment</string>
    <string name="ovo">OVO</string>
    <string name="total_price">Total Price</string>
    <string name="payment_method">Payment Method</string>
    <string name="shopeepay">Shopeepay</string>
    <string name="gopay">Gopay</string>
    <string name="bca">BCA</string>
    <string name="bri">BRI</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="email_dummy">email@gmail.com</string>
    <string name="your_preferences">Your Preferences</string>
    <string name="preferences_dummy">Preferences</string>
    <string name="edit">Edit</string>
    <string name="your_plan">Your Plans</string>
    <string name="transaction_success">Transaction Success</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="reminder_date">(%1$s Day left)</string>
    <string name="title_filter_date">Filter Date</string>

    <string name="your_tour">Your Tour</string>
    <string name="when_do_you_want_to_go_tour">When do you want to go tour?</string>
    <string name="date_tour">Date Tour</string>
    <string name="continue_submit">Continue</string>
    <string name="select_date">Select date</string>
    <string name="get_to_know_you">Get to Know You !</string>
    <string name="what_you_prefer">What do you like in traveling ?</string>

    <string name="logout">Logout</string>
    <string name="welcome_title_guest">Welcome to WisYuk!</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="close">Close</string>
    <string name="oh_no_there_is_something_wrong">Oh no, there is something wrong!</string>
    <string name="i_m_happy_to_receive_a_news_from_wisyuk">I\'m happy to receive a news from WisYuk!</string>
    <string name="signup_success">Sign Up Success! Please login again!</string>
    <string name="login_success">Login Success! Welcome %1$s</string>
    <string name="save">Save</string>
    <string name="edit_your_profile_picture">Edit your profile picture</string>
    <string name="preference_added">Preference added!</string>
    <string name="favorite_added">Favorite added</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="date_hotel_explain">*The hotel date will be spanned from the previous day until the next day based on the date showed above</string>
    <string name="okay_button">Back</string>
    <string name="back_to_home">Back to home</string>
    <string name="icon_calender">Icon Calender</string>
    <string name="favorite_deleted">Favorite removed!</string>
    <string name="dummy_method">Dummy Method</string>
    <string name="receipt">Receipt</string>
    <string name="recommendation_date">Recommendation for %1$s</string>
    <string name="rp_format">Rp %1$s</string>
</resources>